Fix center alignment for full width template

--- a/wp-content/themes/nccdi/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/nccdi/assets/styles/layouts/_pages.scss
@@ -119,5 +119,6 @@
   .main {
     margin: 0 auto;
     float: none;
+    left: 0;
   }
 }
